--- a/theme.toml
+++ b/theme.toml
@@ -1,21 +1,15 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Gazal"
+name = "ghazal"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
-description = ""
-homepage = "http://example.com/"
-tags = []
-features = []
+licenselink = "https://github.com/darshanbaral/ghazal/blob/master/LICENSE"
+description = "lightweight hugo theme for personal blogs"
+homepage = "https://github.com/darshanbaral/ghazal"
+tags = ["blog", "personal"]
+features = ["light weight", "blog", "responsive"]
 min_version = "0.65"
 
 [author]
-  name = ""
-  homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "Darshan Baral"
+  homepage = "https://www.darshanbaral.com/"
