--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -2,6 +2,8 @@ baseURL = "http://www.example.com/"
 languageCode = "en"
 theme = "ghazal"
 
+disableKinds = ["taxonomy", "taxonomyTerm"]
+
 [outputs]
   home = ["HTML"]
   page = ["HTML"]
