added email to social links

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -26,3 +26,4 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
         github = "#"
         twitter = "#"
         linkedin = "#"
+        email= "#"
